grammar
program             : ( function_declaration | import_statement | statement )* EOF ;

import_statement    : ( '!' 'import' | 'import' ) IDENT ( '{' IDENT ( ',' IDENT )* '}' )? ;

function_declaration : 'fn' IDENT '(' parameters? ')' block ;
parameters          : parameter ( ',' parameter )* ;
parameter           : IDENT ':' type ;
type                : 'int' | 'str' | 'bool' | 'list' | 'float' ;

statement           : assignment
                    | compound_assignment
                    | if_statement
                    | while_statement
                    | print_statement
                    | break_statement
                    | continue_statement
                    | return_statement
                    | block
                    | expression_statement
                    ;

expression_statement : call | module_call ;

assignment          : IDENT '=' expression ;
compound_assignment : IDENT compound_op expression ;
compound_op         : '+=' | '-=' | '*=' | '/=' ;

if_statement        : 'if' '(' expression ')' block ( 'else' 'if' '(' expression ')' block )* ( 'else' block )? ;
while_statement     : 'while' '(' expression ')' block ;
print_statement     : 'print' '(' expression ')' ;

break_statement     : 'break' ;
continue_statement  : 'continue' ;
return_statement    : 'return' expression ;

block               : '{' statement+ '}' | '{' '...' '}' ;

(* Statements are separated by newlines or a single ';' — a trailing ';' is an error. *)
(* '...' is only legal as the entire body of an otherwise-empty block. *)

expression          : comparison ;
comparison          : additive ( comparison_op additive )+ ;
comparison_op       : '==' | '!=' | '<' | '>' | '<=' | '>=' ;
additive            : multiplicative ( ( '+' | '-' ) multiplicative )* ;
multiplicative      : unary ( ( '*' | '/' ) unary )* ;
primary             : atom ( '[' expression ']' )* ;
atom                : INT | FLOAT | STRING | TRUE | FALSE | IDENT | call | builtin_call | module_access | list_literal | '(' expression ')' ;
list_literal        : '[' ( expression ( ',' expression )* )? ']' ;
unary               : '-' unary | primary ;
call                : IDENT '(' arguments? ')' ;
builtin_call        : ( 'int' | 'str' | 'bool' | 'list' | 'float' ) '(' arguments? ')' ;
module_access       : IDENT '.' IDENT ( '(' arguments? ')' )? ;
module_call         : IDENT '.' IDENT '(' arguments? ')' ;
arguments           : expression ( ',' expression )* ;

(* A NEWLINE inside an expression is only allowed while ( ) or [ ] are open. *)
